--- a/slides/weektwo/index.qmd
+++ b/slides/weektwo/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Introduction to Computer Security"
 subtitle: "Learning the Lingo and Thinking Like a Hacker"
-description: "When learning computer security, how do we think and talk like a hacker?"
+description: "How should we think and talk like a hacker?"
 date: "2024-09-02"
 date-format: long
 author: Gregory M. Kapfhammer
