feat: Add more references to resources in the projects/index.qmd.

--- a/projects/index.qmd
+++ b/projects/index.qmd
@@ -149,14 +149,20 @@ Python, the TCP/IP protocol and the layout of their headers and payloads, and
 various network monitoring techniques:
 
 - **IP Header Structure**
-  - [IPv4 Header Description on Wikipedia](https://en.wikipedia.org/wiki/IPv4#Header)
-  - [IP Header Format on GeeksforGeeks](https://www.geeksforgeeks.org/ip-header/)
+  - [IPv4 Protocol Description on Wikipedia](https://en.wikipedia.org/wiki/IPv4)
+  - [Reading Binary Data with Python](https://reachtim.com/reading-binary-data-with-python)
 
 - **TCP Header Structure**
-  - [TCP Segment Structure on
-  Wikipedia](https://en.wikipedia.org/wiki/Transmission_Control_Protocol#TCP_segment_structure)
+  - [TCP Protocol Description on
+  Wikipedia](https://en.wikipedia.org/wiki/Transmission_Control_Protocol)
   - [TCP Header Format on
   GeeksforGeeks](https://www.geeksforgeeks.org/introduction-and-ipv4-datagram-header/)
+
+- **Python Networking**
+  - [Python XML-RPC Library](https://docs.python.org/3/library/xmlrpc.server.html)
+  - [Python Socket Library](https://docs.python.org/3/library/socket.html)
+  - [Python Struct Library](https://docs.python.org/3/library/struct.html)
+  - [Regarding struct.unpack() in Python](https://stackoverflow.com/questions/20768107/regarding-struct-unpack-in-python)
 
 Interested in working on this project? See the [{{< iconify fa6-brands github
 size=18px >}}
