feat: Add content about remote code execution to slides/weekeight/index.qmd.

--- a/slides/weekeight/index.qmd
+++ b/slides/weekeight/index.qmd
@@ -309,3 +309,17 @@ flowchart LR
   - Use prepared statements and validate and sanitize inputs
 
 :::
+
+# Remote Code Execution
+
+- Gives attacker ability to run arbitrary code
+- Start a shell with administrative privileges
+- Gains full control of the system, its users, and data
+- The "launching pad" for attacks like a denial of service
+
+::: {.fragment .fade .boxed-content style="margin-top: .05em; font-size: 0.875em;"}
+
+{{< iconify fa6-solid diagram-project >}} The buffer overflow attack is a common
+method for achieving remote code execution! How can we prevent this attack type?
+
+:::
