fix: Clarify the boxed content in slides/weekeight/index.qmd.

--- a/slides/weekeight/index.qmd
+++ b/slides/weekeight/index.qmd
@@ -334,8 +334,7 @@ How do they work? How can we practically detect and/or prevent them?
 ::: {.fragment .fade .boxed-content style="margin-top: .20em; font-size: 0.875em;"}
 
 {{< iconify fa6-solid diagram-project >}} The buffer overflow attack is a common
-method for achieving remote code execution! How can we prevent this attack type?
+method for achieving remote code execution! What is it? How can we prevent this
+attack?
 
 :::
-
-
